modified html file

--- a/1.html
+++ b/1.html
@@ -7,7 +7,7 @@
     <title>Calculator</title>
 </head>
 <html>
-<body style="background-color: rgb(19, 56, 61);">
+<body style="background-color: rgb(58, 177, 22);">
 <font color="blue">
 <h3 >Calcuator using Javascript</h3>
 </font>
@@ -18,42 +18,45 @@
 
 </style>
 <form Name="calc">
-<table id="calc"  style="background-color:darkgoldenrod " >
+<table id="calc"  style="background-color:rgb(173, 32, 56) " >
 <tr>
 <td colspan=5><input id="btn" name="display" onkeypress="return event.charCode >= 48 && event.charCode <= 57" type="text" style="background-color: darkkhaki;"></td>
 <td style="display:none"><input name="M" type="number"></td>
 </tr>
 <tr>
 
-<td><input id="btn" type=button value="0" ></td>
-<td><input id="btn" type=button value="1" ></td>
-<td><input id="btn" type=button value="2" ></td>
-<td><input id="btn" type=button value="+" ></td>
+<td><input id="btn" type=button value="0" OnClick="calc.display.value+='0'"></td>
+<td><input id="btn" type=button value="1" OnClick="calc.display.value+='1'"></td>
+<td><input id="btn" type=button value="2" OnClick="calc.display.value+='2'"></td>
+<td><input id="btn" type=button value="+" OnClick="calc.display.value+='+'"></td>
 </tr>
 <tr>
 
-<td><input id="btn" type=button value="3" ></td>
-<td><input id="btn" type=button value="4" ></td>
-<td><input id="btn" type=button value="5" ></td>
-<td><input id="btn" type=button value="-"></td>
+<td><input id="btn" type=button value="3" OnClick="calc.display.value+='3'"></td>
+<td><input id="btn" type=button value="4" OnClick="calc.display.value+='4'"></td>
+<td><input id="btn" type=button value="5" OnClick="calc.display.value+='5'"></td>
+<td><input id="btn" type=button value="-" OnClick="calc.display.value+='-'"></td>
 </tr>
 <tr>
 
-<td><input id="btn" type=button value="6" ></td>
-<td><input id="btn" type=button value="7" ></td>
-<td><input id="btn" type=button value="8" ></td>
-<td><input id="btn" type=button value="x"></td>
+<td><input id="btn" type=button value="6" OnClick="calc.display.value+='6'"></td>
+<td><input id="btn" type=button value="7" OnClick="calc.display.value+='7'"></td>
+<td><input id="btn" type=button value="8" OnClick="calc.display.value+='8'"></td>
+<td><input id="btn" type=button value="x" OnClick="calc.display.value+='*'"></td>
 </tr>
 <tr>
 
-
-<td><input id="btn" type=button value="/" ></td>
+<td><input id="btn" type=button value="9" OnClick="calc.display.value+='9'"></td>
+<td><input id="btn" type=button value="±" OnClick="calc.display.value=(calc.display.value==Math.abs(calc.display.value)?-(calc.display.value):Math.abs(calc.display.value))">
+</td>
+<td><input id="btn" type=button value="=" OnClick="calc.display.value=eval(calc.display.value)"></td>
+<td><input id="btn" type=button value="/" OnClick="calc.display.value+='/'"></td>
 </tr>
 <tr>
-<td><input id="btn" type=button value="C" ></td>
-<td><input id="btn" type=button value="." ></td>
-<td><input id="btn" type=button value="x2" ></td>
-<td><input id="btn" type=button value="√" ></td>
+<td><input id="btn" type=button value="C" OnClick="calc.display.value=''"></td>
+<td><input id="btn" type=button value="." OnClick="calc.display.value+='.'"></td>
+<td><input id="btn" type=button value="x2" OnClick="calc.display.value=Math.pow(calc.display.value,2)"></td>
+<td><input id="btn" type=button value="√" OnClick="calc.display.value=Math.sqrt(calc.display.value)"></td>
 
 </tr>
 </table>
